src/test/deca/context/invalid/provided/selection_protected.deca
class A {
 protected int x = 0;
}

{
A a = new A();
int y = a.x;
}
